tab centered and corrections made

--- a/google_homepage.html
+++ b/google_homepage.html
@@ -11,11 +11,12 @@
     <header>
       <nav>
         <a href="#">Gmail</a>
-        <a href="https://www.google.com.ng/imghp?hl=en&tab=ri&authuser=0&ogbl"
+        <a href="#"
           >Images</a
         >
-        <img class="g-menu" src="./image/g-menu.png" alt="menu button" />
-        <button>Sign in</button>
+        <img class="g-menu2" src="./image/g-menu2.png" alt="menu button" />
+        </svg>
+         <!--<button>Sign in</button>-->
       </nav>
     </header>
     <div>
@@ -36,5 +37,17 @@
         />
       </form>
     </nav>
+    <div>
+      <button class="search">Google Search</button>
+      <button class="lucky">i'm feeling lucky</button>
+    </div>
+    <div id="languages">
+      Google offered in:
+      <a href="#">Hausa</a>
+      <a href="#">Igbo</a>
+      <a href="#">Ede</a>
+      <a href="#">Yoruba</a>
+      <a href="#">Nigerian pigin</a>
+    </div>
   </body>
 </html>
