--- a/google_homepage.html
+++ b/google_homepage.html
@@ -26,7 +26,7 @@
         alt="google image"
       />
     </div>
-    <nav>
+    <div>
       <form action="https://www.google.com/search" method="get">
         <input
           autocomplete="off"
@@ -36,7 +36,7 @@
           type="text"
         />
       </form>
-    </nav>
+    </div>
     <div>
       <button class="search">Google Search</button>
       <button class="lucky">i'm feeling lucky</button>
